Arrange analysis buttons a little to save vertical space
Also modify spacing a bit.  Analysis goes to the bottom to separate it
visually.

--- a/src/normaltools_gui.ui
+++ b/src/normaltools_gui.ui
@@ -21,13 +21,13 @@
   </property>
   <layout class="QVBoxLayout">
    <property name="spacing">
-    <number>6</number>
+    <number>4</number>
    </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
    <property name="topMargin">
-    <number>6</number>
+    <number>4</number>
    </property>
    <property name="rightMargin">
     <number>0</number>
@@ -440,6 +440,19 @@ use &quot;free&quot; command to make game rated or unrated (free)</string>
     </widget>
    </item>
    <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
     <widget class="QFrame" name="anGroup">
      <layout class="QVBoxLayout" name="verticalLayout">
       <property name="spacing">
@@ -458,13 +471,6 @@ use &quot;free&quot; command to make game rated or unrated (free)</string>
        <number>0</number>
       </property>
       <item>
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>Analysis</string>
-        </property>
-       </widget>
-      </item>
-      <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <property name="topMargin">
          <number>0</number>
@@ -472,6 +478,26 @@ use &quot;free&quot; command to make game rated or unrated (free)</string>
         <property name="rightMargin">
          <number>0</number>
         </property>
+        <item>
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>Analysis</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
         <item>
          <widget class="QToolButton" name="anStartButton">
           <property name="text">
@@ -499,19 +525,6 @@ use &quot;free&quot; command to make game rated or unrated (free)</string>
            <bool>true</bool>
           </property>
          </widget>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
         </item>
        </layout>
       </item>
@@ -661,22 +674,6 @@ use &quot;free&quot; command to make game rated or unrated (free)</string>
       </item>
      </layout>
     </widget>
-   </item>
-   <item>
-    <spacer name="spacer8">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Expanding</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>51</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
