Make the toolsFrame scale with font size
This includes a few new stone icons in larger sizes.  Should do the same for
navigation icons.

--- a/src/normaltools_gui.ui
+++ b/src/normaltools_gui.ui
@@ -38,7 +38,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="whiteStoneLabel">
        <property name="text">
         <string/>
        </property>
@@ -152,7 +152,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
      <item>
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="blackStoneLabel">
        <property name="text">
         <string/>
        </property>
