--- a/src/scoretools_gui.ui
+++ b/src/scoretools_gui.ui
@@ -29,7 +29,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="whiteStoneLabel">
        <property name="text">
         <string/>
        </property>
@@ -266,7 +266,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
      <item>
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="blackStoneLabel">
        <property name="text">
         <string/>
        </property>
