--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -183,7 +183,7 @@
       <string/>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="InterfaceTabWidget">
       <attribute name="title">
@@ -2337,21 +2337,8 @@ Note: 'Delete' concerns saved records.</string>
             </item>
            </widget>
           </item>
-          <item row="3" column="0">
-           <widget class="QCheckBox" name="anPruneCheckBox">
-            <property name="text">
-             <string>Don't display moves with few visits</string>
-            </property>
-           </widget>
-          </item>
           <item row="2" column="1">
            <layout class="QHBoxLayout" name="horizontalLayout_11">
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
             <item>
              <widget class="QLabel" name="label_19">
               <property name="text">
@@ -2367,12 +2354,6 @@ Note: 'Delete' concerns saved records.</string>
           </item>
           <item row="2" column="0">
            <layout class="QHBoxLayout" name="horizontalLayout_12">
-            <property name="topMargin">
-             <number>8</number>
-            </property>
-            <property name="rightMargin">
-             <number>8</number>
-            </property>
             <item>
              <widget class="QLabel" name="label_20">
               <property name="text">
@@ -2391,6 +2372,21 @@ Note: 'Delete' concerns saved records.</string>
             <property name="text">
              <string>Override variation display settings
 (show child moves as circles when analysing)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QCheckBox" name="anHideCheckBox">
+            <property name="text">
+             <string>Hide other moves when showing
+a variation</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <widget class="QCheckBox" name="anPruneCheckBox">
+            <property name="text">
+             <string>Don't display moves with few visits</string>
             </property>
            </widget>
           </item>
